kubernetes/admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: akash-shopnow
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 80
